--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -552,7 +552,7 @@
     <string name="go_back_from_bank">Are you sure you want to go back?</string>
     <string name="wait_for_next_request">For the security of your account, your bank will allow you to Check Out again only after 5 minutes. Please try again after 5 minutes.</string>
     <string name="alert_are_you_sure_to_delete_transactions">Are you sure you want to Delete the Selected Transaction Records?</string>
-    <string name="debit_cart_info">When you make an investment in Reliance Liquid Fund using Tarrakki, you are eligible to apply for a Reliance Anytime Money Card, powered by Tarrakki, Reliance Mutual Fund, and Visa.\n\nThis card is linked to the Reliance Mutual Fund investment, and allows you to instantly withdraw or spend money against your mutual fund investment. The card is valid at Visa enabled ATMs and merchant outlets all over India.\n\nThis card will be shipped to the address mentioned as per your KYC records.</string>
+    <string name="debit_cart_info">When you make an investment in Nippon India Liquid Fund using Tarrakki, you are eligible to apply for a Reliance Anytime Money Card, powered by Tarrakki, Nippon India Liquid Fund, and Visa.\n\nThis card is linked to the Nippon India Liquid Fund investment, and allows you to instantly withdraw or spend money against your mutual fund investment. The card is valid at Visa enabled ATMs and merchant outlets all over India.\n\nThis card will be shipped to the address mentioned as per your KYC records.</string>
     <string name="apply_for_debit_cart">Apply for Debit Card</string>
     <string name="apply_now">Apply Now</string>
     <string name="apply">Apply</string>
@@ -561,9 +561,9 @@
     <string name="mothers_maiden_name">Mothers Maiden Name*</string>
     <string name="what_is_tarrakki_zyaada">What is Tarrakki Zyaada?</string>
     <string name="what_is_tarrakki_zyaada_details">
-        When you park your money in Tarrakki Zyaada, your money will be invested in the Reliance Liquid Fund, which can give you potentially higher returns than your Bank Savings Account or a Fixed Deposit.
+        When you park your money in Tarrakki Zyaada, your money will be invested in the Nippon India Liquid Fund, which can give you potentially higher returns than your Bank Savings Account or a Fixed Deposit.
         \n\nWith your Tarrakki Zyaada investment, you get a Reliance Anytime Money Card, powered by HDFC Bank and Visa. This card enables you to use the money you have invested, should you want to. You can link this card to your online shopping account, use it for your Uber/Ola rides, and even book movie tickets online. It literally acts like a Bank Debit Card.
-        \n\nThis card is linked to the Reliance Liquid Fund, and allows you to instantly withdraw or spend money against your mutual fund investment. This card is valid at Visa enabled ATMs and merchant outlets all over India.
+        \n\nThis card is linked to the Nippon India Liquid Fund, and allows you to instantly withdraw or spend money against your mutual fund investment. This card is valid at Visa enabled ATMs and merchant outlets all over India.
         \n\nIt\'s like parking your idle money in a Savings Bank Account, but with the opportunity to earn almost double the returns.
     </string>
     <string name="where_is_my_money_invested">Where is my money invested?</string>
@@ -572,7 +572,7 @@
     <string name="tarrakki_zyaada_investment">Tarrakki Zyaada</string>
     <string name="invest_and_save_now">Invest and save now</string>
     <string name="faqs">FAQs</string>
-    <string name="reliance_liquid_fund_performance">Reliance Liquid Fund Performance</string>
+    <string name="reliance_liquid_fund_performance">Nippon India Liquid Fund Performance</string>
     <string name="key_benefits">Key Benefits</string>
     <string name="higher_returns_than_your_bank">Potentially Higher Returns than your Savings Account or Fixed Deposit</string>
     <string name="debit_card_powered_by_hdfc_bank_amp_visa_towards_your_investment"><![CDATA[Debit card powered by HDFC Bank & Visa towards your investment]]></string>
@@ -605,15 +605,15 @@
     <string name="change_email_id">Change Email Id</string>
     <string name="change_mobile_number">Change Mobile Number</string>
     <string name="enter_email_id">Enter Email Id</string>
-    <string name="powered_by_tarrakki_reliance_mutual_fund_and_visa">➡ Powered by Tarrakki, Reliance Mutual Fund, and Visa</string>
+    <string name="powered_by_tarrakki_reliance_mutual_fund_and_visa">➡ Powered by Tarrakki, Nippon India Liquid Fund, and Visa</string>
     <string name="symbol_a">∗\u0020\u0020\u0020\u0020\u0020-</string>
     <string name="symbol_b">∗∗\u0020\u0020\u0020-</string>
     <string name="symbol_c">∗∗∗\u0020-</string>
     <string name="daily_purchase_limit_of_50">Daily purchase limit of 50% of the balance or ₹1,00,000 whichever is lower.</string>
     <string name="upto_50_of_the_balance_or_up">Upto 50% of the balance, or up to permissible limit determined by the bank, or ₹50,000, whichever is lower.</string>
     <string name="upto_u20b950_000_or_90_of">Upto ₹50,000 or 50% of the current investment value, whichever is lower.</string>
-    <!--<string name="to_know_more_about_reliance_liquid_fund_click_here">To know more about Reliance Liquid Fund, <font color='#4EB95D'><u><a href='https://www.google.com/'>click here.</a></u></font></string>-->
-    <string name="to_know_more_about_reliance_liquid_fund_click_here">To know more about Reliance Liquid Fund, click here.</string>
+    <!--<string name="to_know_more_about_reliance_liquid_fund_click_here">To know more about Nippon India Liquid Fund, <font color='#4EB95D'><u><a href='https://www.google.com/'>click here.</a></u></font></string>-->
+    <string name="to_know_more_about_reliance_liquid_fund_click_here">To know more about Nippon India Liquid Fund, click here.</string>
     <string name="historical_returns">Historical Returns</string>
     <string name="investment_amount">Investment Amount</string>
     <string name="email_id_or_mobile_number">Email Id or Mobile Number*</string>
@@ -739,4 +739,5 @@
     <string name="alert_verify_bank_account">Please Add document.</string>
     <string name="verified">Verified</string>
     <string name="update_bank_account">Update Bank Account</string>
+    <string name="account_verification_is_pending">Your Account verification is pending. We will notify you once verified. Generally it takes 2–3 working days to be verified.</string>
 </resources>
