--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -379,7 +379,8 @@
     <string name="first_installment_of_sip_on_toady">First installment of SIP on today</string>
     <string name="lumpsum">Lumpsum</string>
     <string name="order_confirm">Order Confirm</string>
-    <string name="complete_nach_mandate">Complete Nach Mandate</string>
+    <string name="complete_nach_mandate">Complete NACH Mandate</string>
+    <string name="complete_isip_mandate">Complete ISIP Mandate</string>
     <string name="coming_soon">Coming Soon.</string>
 
     <string name="pay_now">Pay Now</string>
