--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">Tarrakki</string>
+    <!--<string name="app_name">Tarrakki</string>-->
 
     <!--Facebook Details-->
     <string name="facebook_app_id">387985278434317</string>
