1 Save user extra data screen for video KYC screen. 2 Set-up Video kyc flow and validation.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -759,5 +759,6 @@
         As per government guidelines, it is mandatory to complete your KYC(\'Know Your Customer\') in order to invest in Mutual Funds.
         \n\n This is a one-time process. Once your KYC is complete, you will be able to invest any Mutual Fund of your choice in India.
     </string>
+    <string name="income_information">Income Information</string>
 
 </resources>
