--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -771,5 +771,6 @@
     <string name="under_process">Under Process</string>
     <string name="approved">Approved</string>
     <string name="your_kyc_application_has_been_approved_your_tarrakki_account_will_be_activated_in_the_next_24_hours">Your KYC application has been approved. Your Tarrakki account will be activated in the next 24 hours.</string>
+    <string name="video_kyc_process_completed"><![CDATA[Your KYC Application has been submitted successfully. Your Tarrakki account will be processed & activated once your KYC application is approved. This can take up to 5 working days.]]></string>
 
 </resources>
