1 New project's interview with client. 2 Minor issue and flow discussion for video kyc with team. 3 Unit testing of Video KYC functionality in staging environment. 4 Testing of push notification of Video KYC and its redirect flow. 5 Fixes minor bugs and improve app stability.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -775,5 +775,6 @@
     <string name="video_kyc_process_completed"><![CDATA[Your KYC Application has been submitted successfully. Your Tarrakki account will be processed & activated once your KYC application is approved. This can take up to 5 working days.]]></string>
     <string name="kyc_rejection_remark_default_msg">Your KYC application was rejected. You will be able to resubmit your application with revised details after 24–48 hours.</string>
     <string name="kyc_details">KYC Details</string>
+    <string name="video_kyc">Video KYC</string>
 
 </resources>
