--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -785,5 +785,14 @@
     <string name="your_risk_assessment_is_completed">Your risk assessment is completed!</string>
     <string name="retake_risk_assessment">Retake Risk Assessment</string>
     <string name="observation">Observation</string>
+    <string name="help_us_understand_your_risk_profile">Help us understand your risk profile by answering some simple questions.</string>
+    <string name="know_your_risk_profile">know Your Risk Profile</string>
+    <string name="start_assessment">Start Assessment</string>
+    <string name="know_your_investment_risk_profile">Know Your Investment Risk Profile</string>
+    <string name="understand_the_riskometer">Understand the Riskometer</string>
+    <string name="make_better_investment_choice">Make Better Investment Choice</string>
+    <string name="low">Low</string>
+    <string name="high">High</string>
+    <string name="risk_assessment">Risk Assessment</string>
 
 </resources>
