--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,8 @@
         \n\n- Direct Plans (No Agent Commissions)
     </string>
     <string name="why_rural_invest_info">
+        Rural invest is an initiative by Tarrakki.com along with 4 promising young entrepreneurs - Satyam, Naman, Raghav &amp; Madhav.
+        \n\n
         Today, India has the world’s largest rural population, which is yet to be tapped to its
         fullest potential. There exists a pertinent lack of financial planning in rural Indian
         households. According to a recent survey conducted by SEBI, less than 1% of rural
@@ -815,5 +817,18 @@
     <string name="video_kyc">Video KYC</string>
     <string name="chrome_required_to_install">We require the Chrome App installed in your device to redirect for the Video KYC so please install the Chrome App from Play Store.</string>
     <string name="try_new_application">TRY NEW APPLICATION</string>
+    <string name="your_risk_profile">Your Risk Profile</string>
+    <string name="your_risk_assessment_is_completed">Your risk assessment is completed!</string>
+    <string name="retake_risk_assessment">Retake Risk Assessment</string>
+    <string name="observation">Observation</string>
+    <string name="help_us_understand_your_risk_profile">Help us understand your risk profile by answering some simple questions.</string>
+    <string name="know_your_risk_profile">know Your Risk Profile</string>
+    <string name="start_assessment">Start Assessment</string>
+    <string name="know_your_investment_risk_profile">Know Your Investment Risk Profile</string>
+    <string name="understand_the_riskometer">Understand the Riskometer</string>
+    <string name="make_better_investment_choice">Make Better Investment Choice</string>
+    <string name="low">Low</string>
+    <string name="high">High</string>
+    <string name="risk_assessment">Risk Assessment</string>
 
 </resources>
