1 Implemented riskometer for fund details screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -794,5 +794,6 @@
     <string name="low">Low</string>
     <string name="high">High</string>
     <string name="risk_assessment">Risk Assessment</string>
+    <string name="fund_riskometer">Fund Riskometer</string>
 
 </resources>
