1. Implemented Riskometer for Fund Risk Level in fund details screen. 2. Implemented Riskometer for Risk Profile and Complete Risk Assessment UI in fund details screen. 3. Implemented get Risk profile in account screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -795,5 +795,7 @@
     <string name="high">High</string>
     <string name="risk_assessment">Risk Assessment</string>
     <string name="fund_riskometer">Fund Riskometer</string>
+    <string name="complete_risk_assessment">Complete Risk Assessment</string>
+    <string name="complete_your_free_assessment_and_know_your_risk_profile_now">Complete your free assessment and know your risk profile now</string>
 
 </resources>
