--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -830,5 +830,8 @@
     <string name="low">Low</string>
     <string name="high">High</string>
     <string name="risk_assessment">Risk Assessment</string>
+    <string name="upi_payment">UPI Payment</string>
+    <string name="follow_the_below_steps_to_complete_n_your_payment">Follow the below steps to complete\n your payment</string>
+    <string name="please_do_not_close_the_app_until_you_naccept_the_collect_request">Please do not close the app until you \naccept the collect request.</string>
 
 </resources>
